[metadata]
name = qsimpy
version = attr: qsimpy.__version__
author = Seyed Samie Mostafavi
author_email = samiemostafavi@gmail.com
url = https://github.com/samiemostafavi/qsimpy
description = Queuing theoretic simulation using SimPy
long_description = file: README.md
long_description_content_type = text/markdown
keywords = queuing theory, simpy
license = MIT License
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
zip_safe = True
packages = find:
install_requires =
    simpy
    pyparsing
    numpy
    pandas
    dataclasses
    seaborn
    pyarrow
    loguru
    pydantic
    polars

[options.extras_require]
dev =
    pre-commit
    black
    flake8
    isort
    codespell
      

